--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -5,16 +5,56 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical">
 
-    <TextView    android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:text="@string/activity_title_label"
-                 style="?android:listSeparatorTextViewStyle"/>
-
-    <EditText
-        android:id="@+id/activity_title"
-        android:hint="Activity name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="7dp">
+
+            <ImageView
+                android:id="@+id/activity_photo"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:scaleType="centerInside"
+                android:background="@android:color/darker_gray"
+                android:cropToPadding="true"
+                />
+
+            <ImageButton
+                android:id="@+id/activity_camera"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_camera"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_title_label"
+                style="?android:listSeparatorTextViewStyle"/>
+
+            <EditText
+                android:id="@+id/activity_title"
+                android:hint="Activity name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
 
     <TextView    android:layout_width="match_parent"
                  android:layout_height="wrap_content"
