--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -10,39 +10,65 @@
         android:text="User Profile"
         style="?android:listSeparatorTextViewStyle"/>
 
-    <EditText
-        android:id="@+id/first_name"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="Name"/>
-    <EditText
-        android:id="@+id/last_name"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="Surname"/>
-    <TextView
-        android:id="@+id/user_id"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="@string/user_id"
-        android:hint="ID"
-        android:paddingLeft="10dp"/>
-
-    <Spinner
-        android:id="@+id/gender_spinner"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content">
-    </Spinner>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/first_name"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Name"/>
+            <EditText
+                android:id="@+id/last_name"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Surname"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/user_id"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textSize="17dp"
+                android:text="@string/user_id"
+                android:hint="ID"
+                android:paddingLeft="10dp"/>
+
+            <Spinner
+                android:id="@+id/gender_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+            </Spinner>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+        <EditText
+            android:id="@+id/email_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            />
+
         <EditText
             android:id="@+id/user_comments"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:hint="comments"/>
-    </LinearLayout>
+
 
 
 </LinearLayout>
